# igne

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TESTING.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: e2e-tests.yml  release.yml
compat/obsidian-api/: metadata.json
compat/obsidian-upstream/: README.md  sources.json
docs/: AGENT-ONBOARDING.md  AGENT-QUICK-REF.md  ARCHITECTURE_FLOWS.md  CURRENT_SETUP_AND_DIRECTION.md  EMBED_PARAMETERS.md  ENGINEERING_GUARDRAILS.md  MIND-GARDEN.md  OBSIDIAN_COMPATIBILITY_AI_FIRST_ROADMAP.md  OBSIDIAN_OFFICIAL_SOURCES_TOOLING.md  OBSIDIAN_SETTINGS_FORMAT.md  OBSIDIAN_SUPPORT_MATRIX.md  PLUGIN_COMPATIBILITY.md  PLUGIN_TIERS.md  README.md  STREAM_FIRST_EDITOR_AND_AI_COLLAB.md  WORKTREE_WORKFLOW.md  plugin-development.md
docs/compat/: COMPAT_POLICY.md
examples/: daily-note-plugin.ts  hello-world-plugin.ts  sample-plugin.ts  word-counter-plugin.ts
examples/test-vault/: Linked Note 1.md  Linked Note 2.md  (+2 more)
scripts/: create-worktree.sh  cz-glm  list-worktrees.sh  loop.sh  merge-worktree.sh  run-e2e-tests.sh  run-loop.sh  run-parallel-loops.sh  verify-plugin-system.test.ts  verify-plugin-system.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons-dev/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: fixtures.ts
work/: embed-block.md  embed-heading.md  release-plan.md  task.md  task.txt
(+206 files in other folders)
