[package]
name = "igne"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "igne_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
notify = { version = "7.0", features = ["serde"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
